--- a/data/blog/test-post.mdx
+++ b/data/blog/test-post.mdx
@@ -1,11 +1,15 @@
 ---
-title: 'Markdown/MDX with Next.js'
-date: '2021-06-21'
-summary: 'klsjafhaskldjhfaskjfhas'
-author: 'Daniel Hangan'
+title: "Markdown/MDX with Next.js"
+date: "2021-06-21"
+summary: "klsjafhaskldjhfaskjfhas"
+author: "Daniel Hangan"
 ---
-
 
 # Hello World
 
 hope this is working fine.
+
+```python
+def main_func():
+    return "hello world"
+```
