--- a/data/blog/7000_minutes_of_meditation.mdx
+++ b/data/blog/7000_minutes_of_meditation.mdx
@@ -5,6 +5,14 @@ summary: "Insights from my meditation journey."
 author: "Daniel Hangan"
 ---
 
+<img
+  alt={`Norway`}
+  src={`/images/7000_minutes_of_meditation.jpg`}
+  width={1077}
+  height={718}
+  priority
+/>
+
 > “Meditate. I practice Transcendental Meditation and believe that it has enhanced my open-mindedness, higher-level perspective, equanimity, and creativity. It helps slow things down so that I can act calmly even in the face of chaos, just like a ninja in a street fight. I’m not saying that you have to meditate in order to develop this perspective; I’m just passing along that it has helped me and many other people and I recommend that you seriously consider exploring it.”― **Ray Dalio**
 
 I’m starting this article with Ray Dalio’s quote to consent my deepest appreciation for sharing his best practices of life principles and inspiring others to cultivate one of the most life-changing skills, meditation.<br />
